--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,10 @@
 <body>
     <div class="container">
         <div>
-            <h1>Hello Spring</h1>
+            <h1>운동 사이트</h1>
             <p>회원 기능</p>
             <p>
-                <a href="/members/new">회원 가입</a>
-                <a href="/members">회원 목록</a>
+                <a href="/workout">운동 날짜</a>
             </p>
         </div>
     </div> <!-- /container -->
