--- a/src/main/resources/templates/workout.html
+++ b/src/main/resources/templates/workout.html
@@ -10,9 +10,13 @@
         	<tr th:each="num : ${#numbers.sequence(1,5)}">
         		
         		<th:block th:each="day : ${list}">
-        			<p th:if="${ day != 0 }">
-        				<span th:text="${day}">
-        			</p>
+        			<th:block th:if="${ day != 0}">
+        				<td th:text="${day}">
+        			<th:block>
+        			
+        			<th:block th:unless="${day == 0}">
+						<td th:text="${day}">      			
+        			<th:block>
         		<th:block>
         	
         	</tr>
