--- a/src/main/resources/templates/workout.html
+++ b/src/main/resources/templates/workout.html
@@ -15,7 +15,7 @@
         			<th:block>
         			
         			<th:block th:unless="${day == 0}">
-						<td th:text="${day}">      			
+						<td th:text="${day}">
         			<th:block>
         		<th:block>
         	
@@ -23,5 +23,6 @@
         
         </table>
     </div> <!-- /container -->
+	<a th:href="@{/}">메인으로</a>
 </body>
 </html>
