--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <body>
     <div class="container">
         <div>
             <h1>운동 사이트</h1>
             <p>
-                <a href="/workout">운동 날짜</a>
+                <a th:href="@{workout}">운동 날짜</a>
             </p>
         </div>
     </div> <!-- /container -->
