--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
         <div>
             <h1>운동 사이트</h1>
             <p>
-                <a th:href="@{workout}">운동 날짜</a>
+                <a th:href="@{/workout/}">운동 날짜</a>
             </p>
         </div>
     </div> <!-- /container -->
