--- a/src/main/resources/templates/workoutPopup.html
+++ b/src/main/resources/templates/workoutPopup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>운동 내용 입력</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
     form.addEventListener('submit',submitTest);
 
     // 가져온 날짜 데이터 세팅
-    const javaDate = JSON.parse([[${date}]]);
+    const date = ([[${date}]]);
 
     // Submit 했을 때 작동하는 코드
     function submitTest(e){
@@ -35,22 +36,10 @@
         // form 의 데이터를 받아온다.
         const payload = new FormData(form);
 
-        fetch('save-exercise', {
-            method: 'POST',
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                date: javaDate,
-                exercise : payload.get('exercise'),
-            }),
-        }).then((response)=>{
-            return response.json();
-        }).then((data)=>{
-            console.log('response.body',data)
-        }).catch((error)=>{
-            console.log('error',error)
-        });
+        axios.post('/workout/save-exercise',payload)
+            .then(response=>{
+                console.log('response',response)
+            })
     }
 
 
