--- a/src/main/resources/templates/contents/workout.html
+++ b/src/main/resources/templates/contents/workout.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns: lang="eng">
-<head>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-	<title>운동 일정</title>
-	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-	<script type="text/javascript" th:src="@{/js/popup.js}"></script>
-</head>
-<body>
-    <div class="container">
+<html
+		xmlns:th="http://www.thymeleaf.org"
+		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+		layout:decorate="~{layouts/layout}"
+		lang="eng">
+<!--	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>-->
+<!--	<script type="text/javascript" th:src="@{/js/popup.js}"></script>-->
+    <div layout:fragment="content">
         <div>
             <h1>운동 일정</h1>
         </div>
@@ -34,8 +33,8 @@
 				</th:block>
 			</tbody>
 		</table>
-    </div> <!-- /container -->
 
-	<a th:href="@{/}">메인으로</a>
-</body>
+		<a th:href="@{/}">메인으로</a>
+	</div> <!-- /container -->
+
 </html>
