--- a/src/main/resources/templates/contents/workoutPopup.html
+++ b/src/main/resources/templates/contents/workoutPopup.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>운동 내용 입력</title>
-</head>
-<body>
+<html
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layouts/layout}"
+        lang="en"
+>
+
+<div layout:fragment="content">
     <h2>운동 내용 입력</h2>
     <form>
         <div>
@@ -17,7 +18,8 @@
             <button type="button" onclick="window.history.back()">취소</button>
         </div>
     </form>
-</body>
+</div>
+
 </html>
 
 <script th:inline="javascript">
