--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en" >
-    <div class="content" th:fragment="content">
+    <main class="flex-shrink-0" th:fragment="content">
         header 입니다.
-    </div>
+    </main>
 </html>
