Calendar Next Previous Add

--- a/src/main/resources/templates/contents/workout.html
+++ b/src/main/resources/templates/contents/workout.html
@@ -12,9 +12,9 @@
 
 	<div class="card-body d-flex flex-column align-items-center">
 		<div class="d-flex align-items-center mb-3">
-			<button class="btn-round-5"> < </button>
-			<h2 th:text="${nowDate.year}+'-'+${nowDate.month>10?nowDate.month:'0'+nowDate.month}"></h2>
-			<button class="btn-round-5"> > </button>
+			<button class="btn-round-5" th:onclick="|changeMonth(${nowDate.year} ,${nowDate.month}, 0)|"> < </button>
+			<h2 th:text="${nowDate.year}+'-'+${nowDate.month >= 10 ? nowDate.month:'0'+nowDate.month}"></h2>
+			<button class="btn-round-5" th:onclick="|changeMonth(${nowDate.year} ,${nowDate.month}, 1)|"> > </button>
 		</div>
 
 		<div class="d-grid"
@@ -37,4 +37,26 @@
 		<a class="mt-3" th:href="@{/}">메인으로</a>
 	</div> <!-- /container -->
 </th:block>
+
 </html>
+
+<script th:inline="javascript">
+	function changeMonth(year, month, flag) {
+		console.log(`year : ${year} , month : ${month}, flag : ${flag}` )
+
+		if(flag && month !== 12){
+			month++;
+		}else if(flag && month === 12){
+			year++
+			month = 1;
+		}
+
+		if (!flag && month !== 1) {
+			month--;
+		}else if(!flag && month === 1) {
+			year--
+			months = 12;
+		}
+		window.location.href = `/workout/${year}/${month}`;
+	}
+</script>
